src/components/Header/styles.module.scss
.headerContent {
  max-width: 1120px;
  height: 5rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: flex;
  align-items: center;

  nav {
    margin-left: 2.5rem;
    height: 5rem;

    a {
      display: inline-block;
      position: relative;
      padding: 0 0.5rem;
      height: 5rem;
      line-height: 5rem;

      & + a {
        margin-left: 2rem;
      }

      &.active {
        font-weight: bold;
      }

      &.active::after {
        content: "";
        height: 3px;
        border-radius: 3px 3px 0 0;
        width: 100%;
        position: absolute;
        bottom: 1px;
        left: 0;
        background: var(--chakra-colors-yellow-500);
      }
    }
  }

  a:not(:first-child) {
    margin-left: auto;
  }
}

